<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_to_chatti_signup">New to Chatti? Sign up!</string>
    <string name="username_is_empty">User name is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="error_try_again">Error! try again</string>
    <string name="already_on_chatti_sign_in">Already on chatti? login</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="phone_number_is_empty">Phone number is empty</string>
    <string name="phone_number_already_exists">PhonenNumber already exists</string>
    <string name="invalid_user_name_password">Invalid username or password</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>