<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="?attr/authLogoSize"
                android:layout_height="?attr/authLogoSize"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/ic_messages"
                android:layout_marginTop="@dimen/_80sdp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/formContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/logoImageView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/_44sdp"
                android:layout_marginHorizontal="@dimen/_16sdp"
                app:cardCornerRadius="@dimen/_4sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginUsernameInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:errorEnabled="true"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginHorizontal="@dimen/_16sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/username"
                            android:textSize="?attr/textSizeOfFormsInput"
                            android:inputType="text"
                            android:imeOptions="actionNext" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/loginPasswordInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/loginUsernameInputLayout"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:passwordToggleEnabled="true"
                        app:errorEnabled="true"
                        android:layout_marginHorizontal="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="?attr/textSizeOfFormsInput" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/loginButton"
                        app:layout_constraintBottom_toBottomOf="@id/loginButton"
                        app:layout_constraintLeft_toLeftOf="@id/loginButton"
                        app:layout_constraintRight_toRightOf="@id/loginButton" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/loginButton"
                        android:layout_width="?attr/authActionButtonWidth"
                        android:layout_height="?attr/authActionButtonHeight"
                        app:layout_constraintTop_toBottomOf="@id/loginPasswordInputLayout"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        app:cardCornerRadius="?attr/authActionButtonCornerRadius">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="?attr/authActionButtonTextSize"
                            android:textColor="?attr/authActionButtonTextColor"
                            android:text="@string/login" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_to_chatti_signup"
                app:layout_constraintTop_toBottomOf="@id/formContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="?attr/authRedirectionTextSize"
                android:textColor="?attr/authRedirectionTextColor"
                android:layout_margin="@dimen/_16sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fragContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
